--- a/index.html
+++ b/index.html
@@ -4,57 +4,44 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Linking CSS from bootstrap-->
-        <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/minty/bootstrap.min.css" rel="stylesheet" integrity="sha384-9NlqO4dP5KfioUGS568UFwM3lbWf3Uj3Qb7FBHuIuhLoDp3ZgAqPE1/MYLEBPZYM" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <header>
-        <div>
-            <nav class="navbar navbar-expand-lg" id="navbarColor03">
-                <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
-                    <div class="card-body">
-                        <h4 class="card-title">Rebecca Barrett</h4>
-                    </div>
-                    </div>
-                </li>
-                <li class="nav-item active text-right">
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-                </ul>
-                    </div>
-                    </nav>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg "> 
+                <h3>Rebecca Barrett</h3>
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-secondary active">
+                        <input type="radio" name="options" id="option1" autocomplete="off" checked> About
+                    </label>
+                    <label class="btn btn-secondary">
+                        <input type="radio" name="options" id="option2" autocomplete="off"> Portfolio
+                    </label>
+                    <label class="btn btn-secondary">
+                        <input type="radio" name="options" id="option3" autocomplete="off"> Contact
+                    </label>
                 </div>
-            </div>
+            </nav>
         </div>
-
     </header>
     <body>
-        <section class="container">
-            <article>
-                <div class="row">
-                    <div class="col-md">
-                        <div class="card border-primary mb-3" style="max-width: 20rem;">
-                            <div class="card-header"> 
-                                <h1>About Me</h1>
-                            </div>
-                            <div class="card-body">
-                                <img src="http://placekitten.com/200/250">
-                                <p class="card-text">      
-                                    You tell me where we start, where we're going, where we're going afterwards. You just tell me what you want, and I'm gonna be that for you. There's a hundred thousand streets in this city. If I drive for you, you get your money. I get sick of myself, so I can imagine how everyone else feels. I don't sit in while you're running it down. I went through puberty in a theme park. He said that I was going to get to rob the bank for real.
-                                </p> 
-                            </div>
-                            </div>
-                        
-
-                </article>
+        <div class="container">
+            <div class="jumbotron">
+                <h1 class="display-4">About Me</h1>
+                <hr class="my-4">
+                <div>
+                    <img src="http://placekitten.com/200/200">
+                    <p>
+                        You tell me where we start, where we're going, where we're going afterwards. You just tell me what you want, and I'm gonna be that for you. There's a hundred thousand streets in this city. If I drive for you, you get your money. I get sick of myself, so I can imagine how everyone else feels. I don't sit in while you're running it down. I went through puberty in a theme park. He said that I was going to get to rob the bank for real.
+                    </p>
                 </div>
             </div>
         </div>
     </body>
+
+    <footer>
+    <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">©Copyright
+        </div>    
+    </footer>
 </html>
