Fleshed out the card layout for portfolio

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,8 @@
         <div class="container">
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
+                    <h1 class="display-4">Contact</h1>
+                    <hr class="my-4">
                     <form action="https://formspree.io/barrett4467@gmail.com" method="POST">
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Name</label>
