--- a/contact.html
+++ b/contact.html
@@ -9,16 +9,21 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg "> 
-                <h3>Rebecca Barrett</h3>
+                <h3>  
+                    <span class="badge badge-secondary">Rebecca Barrett</span>
+                </h3>
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                     <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked> About
+                        <input type="radio" name="options" id="option1" autocomplete="off" checked> 
+                        <a href="index.html">About</a>
                     </label>
                     <label class="btn btn-secondary">
-                        <input type="radio" name="options" id="option2" autocomplete="off"> Portfolio
+                        <input type="radio" name="options" id="option2" autocomplete="off">
+                            <a href="portfolio.html">Portfolio</a>
                     </label>
                     <label class="btn btn-secondary">
-                        <input type="radio" name="options" id="option3" autocomplete="off"> Contact
+                        <input type="radio" name="options" id="option3" autocomplete="off"> 
+                        <a href="contact.html">Contact</a>
                     </label>
                 </div>
             </nav>
