--- a/portfolio.html
+++ b/portfolio.html
@@ -9,16 +9,21 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg "> 
-                <h3>Rebecca Barrett</h3>
+                <h3>  
+                    <span class="badge badge-secondary">Rebecca Barrett</span>
+                </h3>
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                     <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked> About
+                        <input type="radio" name="options" id="option1" autocomplete="off" checked> 
+                        <a href="index.html">About</a>
                     </label>
                     <label class="btn btn-secondary">
-                        <input type="radio" name="options" id="option2" autocomplete="off"> Portfolio
+                        <input type="radio" name="options" id="option2" autocomplete="off">
+                         <a href="portfolio.html">Portfolio</a>
                     </label>
                     <label class="btn btn-secondary">
-                        <input type="radio" name="options" id="option3" autocomplete="off"> Contact
+                        <input type="radio" name="options" id="option3" autocomplete="off"> 
+                        <a href="contact.html">Contact</a>
                     </label>
                 </div>
             </nav>
@@ -36,21 +41,13 @@
                         <div class="col-md">
                             <div class="card" style="width: 18rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                                <div class="card-body">
-                                    <p class="card-text"> 
-                                        Hangman
-                                    </p>
-                                </div>
+                                <span class="badge badge-secondary">Hangman</span>
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="card" style="width: 18rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                                <div class="card-body">
-                                    <p class="card-text"> 
-                                        RPG Game
-                                    </p>
-                                </div>
+                                <span class="badge badge-secondary">RPG Game </span>
                             </div>
                         </div>
                     </div>
@@ -58,32 +55,20 @@
                         <div class="col-md">
                             <div class="card" style="width: 18rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                                <div class="card-body">
-                                    <p class="card-text"> 
-                                        Trivia Game
-                                    </p>
-                                </div>
+                                <span class="badge badge-secondary">Trivia Game </span>
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="card" style="width: 18rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                                <div class="card-body">
-                                    <p class="card-text"> 
-                                        Rutgers Info Widget
-                                    </p>
-                                </div>
+                                <span class="badge badge-secondary">Trivia Game </span>
                             </div>
                         </div>
                     </div>
                     <section>
                         <div class="card" style="width: 18rem;">
                             <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                            <div class="card-body">
-                                <p class="card-text"> 
-                                    Rock Paper Scissors
-                                </p>
-                            </div>
+                            <span class="badge badge-secondary">Trivia Game </span>
                         </div>
                     </section>
                 </div>
