--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--Linking CSS from bootstrap-->
+        <!--Linking style from bootstrap-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!--Linking CSS -->
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <header>
         <div class="container">
@@ -21,7 +23,7 @@
                         <input type="radio" name="options" id="option2" autocomplete="off">
                             <a href="portfolio.html">Portfolio</a>
                     </label>
-                    <label class="btn btn-secondary">
+                    <label class="btn btn-secondary btn-contact">
                         <input type="radio" name="options" id="option3" autocomplete="off"> 
                         <a href="contact.html">Contact</a>
                     </label>
