--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <!-- Linking Bootstap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!--Linking CSS -->
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <header>
         <div class="container">
