--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <!--Linking style from bootstrap-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <!--Linking CSS -->
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <header>
-        <div class="container">
+        <div>
             <nav class="navbar navbar-expand-lg "> 
                 <h3>  
                     <span class="badge badge-secondary">Rebecca Barrett</span>
@@ -33,16 +33,19 @@
     </header>
     <body>
         <div class="container">
-            <div class="jumbotron">
-                <h1 class="display-4">About Me</h1>
-                <hr class="my-4">
-                <div>
-                    <img src="http://placekitten.com/200/200">
-                    <p>
-                        You tell me where we start, where we're going, where we're going afterwards. You just tell me what you want, and I'm gonna be that for you. There's a hundred thousand streets in this city. If I drive for you, you get your money. I get sick of myself, so I can imagine how everyone else feels. I don't sit in while you're running it down. I went through puberty in a theme park. He said that I was going to get to rob the bank for real.
-                    </p>
+            <div class="wrapper">
+                <div class="jumbotron">
+                    <h1 class="display-4">About Me</h1>
+                    <hr class="my-4">
+                    <div>
+                        <img src="http://placekitten.com/200/200">
+                        <p>
+                            You tell me where we start, where we're going, where we're going afterwards. You just tell me what you want, and I'm gonna be that for you. There's a hundred thousand streets in this city. If I drive for you, you get your money. I get sick of myself, so I can imagine how everyone else feels. I don't sit in while you're running it down. I went through puberty in a theme park. He said that I was going to get to rob the bank for real.
+                        </p>
+                    </div>
                 </div>
             </div>
+       
         </div>
     </body>
 
