fixed width on nav bar finalized layout of index

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
             </nav>
             </div>
     </header>
-    <body>
+    <body> 
         <div class="container">
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
@@ -77,7 +77,7 @@
             </div>
         </div>
     </body>
-    <footer>
+    <footer id="sticky-footer">
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">©Copyright
         </div>    
