--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h1 class="display-4">About Me</h1>
                     <hr class="my-4">
                     <div>
-                        <img src="http://placekitten.com/200/200">
+                        <img src="assets/images/photo.png">
                         <p>
                             You tell me where we start, where we're going, where we're going afterwards. You just tell me what you want, and I'm gonna be that for you. There's a hundred thousand streets in this city. If I drive for you, you get your money. I get sick of myself, so I can imagine how everyone else feels. I don't sit in while you're running it down. I went through puberty in a theme park. He said that I was going to get to rob the bank for real.
                         </p>
