--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <header>
-        <div class="container">
+        <div>
             <nav class="navbar navbar-expand-lg "> 
                 <h3>  
                     <span class="badge badge-secondary">Rebecca Barrett</span>
@@ -33,23 +33,25 @@
     </header>
     <body>
         <div class="container">
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <h1 class="display-4">Contact</h1>
-                    <hr class="my-4">
-                    <form action="https://formspree.io/barrett4467@gmail.com" method="POST">
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">Name</label>
-                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
-                            <label for="exampleFormControlInput1">Email</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlTextarea1">Message</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
+            <div class="wrapper">
+                <div class="jumbotron">
+                    <div>
+                        <h1 class="display-4">Contact</h1>
+                        <hr class="my-4">
+                        <form action="https://formspree.io/barrett4467@gmail.com" method="POST">
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Name</label>
+                                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
+                                <label for="exampleFormControlInput1">Email</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Message</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-blue">Submit</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
