--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <header>
-        <div class="container">
+        <div>
             <nav class="navbar navbar-expand-lg "> 
                 <h3>  
                     <span class="badge badge-secondary">Rebecca Barrett</span>
