updated styling on port elements increased img sixe

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,44 +33,46 @@
     </header>
     <body> 
         <div class="container">
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <div class="row">
-                        <h1 class="display-4">Portfolio</h1>
-                        <hr class="my-4">
-                    </div>
+            <div class="wrapper">
+                <div class="jumbotron">
                     <div class="row">
                         <div class="col-md">
-                            <div class="card" style="width: 18rem;">
-                                <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                                <span class="badge badge-secondary">Hangman</span>
-                            </div>
-                        </div>
-                        <div class="col-md">
-                            <div class="card" style="width: 18rem;">
-                                <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                                <span class="badge badge-secondary">RPG Game </span>
-                            </div>
+                            <h1 class="display-4">Portfolio</h1>
+                            <hr class="my-4">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md">
                             <div class="card" style="width: 18rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                                <span class="badge badge-secondary">Trivia Game </span>
+                                <span class="badge badge-label">Hangman</span>
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="card" style="width: 18rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                                <span class="badge badge-secondary">Trivia Game </span>
+                                <span class="badge badge-label">RPG Game </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="card" style="width: 18rem;">
+                                <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
+                                <span class="badge badge-label">Trivia Game </span>
+                            </div>
+                        </div>
+                        <div class="col-md">
+                            <div class="card" style="width: 18rem;">
+                                <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
+                                <span class="badge badge-label">Trivia Game </span>
                             </div>
                         </div>
                     </div>
                     <section>
                         <div class="card" style="width: 18rem;">
                             <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
-                            <span class="badge badge-secondary">Trivia Game </span>
+                            <span class="badge badge-label">Trivia Game </span>
                         </div>
                     </section>
                 </div>
