attempted to make responsive header

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     </head>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg "> 
+            <nav class="navbar navbar-expand-lg ">
                 <h3>  
                     <span class="badge badge-secondary">Rebecca Barrett</span>
                 </h3>
@@ -19,11 +19,11 @@
                         <input type="radio" name="options" id="option1" autocomplete="off" checked> 
                         <a href="index.html">About</a>
                     </label>
-                    <label class="btn btn-secondary">
+                    <label class="btn btn-secondary active">
                         <input type="radio" name="options" id="option2" autocomplete="off">
                             <a href="portfolio.html">Portfolio</a>
                     </label>
-                    <label class="btn btn-secondary">
+                    <label class="btn btn-secondary active">
                         <input type="radio" name="options" id="option3" autocomplete="off"> 
                         <a href="contact.html">Contact</a>
                     </label>
