--- a/portfolio.html
+++ b/portfolio.html
@@ -19,11 +19,11 @@
                         <input type="radio" name="options" id="option1" autocomplete="off" checked> 
                         <a href="index.html">About</a>
                     </label>
-                    <label class="btn btn-secondary">
+                    <label class="btn btn-secondary active">
                         <input type="radio" name="options" id="option2" autocomplete="off">
                          <a href="portfolio.html">Portfolio</a>
                     </label>
-                    <label class="btn btn-secondary">
+                    <label class="btn btn-secondary active">
                         <input type="radio" name="options" id="option3" autocomplete="off"> 
                         <a href="contact.html">Contact</a>
                     </label>
