layout for portfolio changed so 2 pictures sit @ md

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
             </nav>
             </div>
     </header>
-    <body> 
+    <body class="background"> 
         <div class="container">
             <div class="wrapper">
                 <div class="jumbotron">
@@ -43,13 +43,13 @@
                     </div>
                     <div class="row">
                         <div class="col-md">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 15rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
                                 <span class="badge badge-label">Hangman</span>
                             </div>
                         </div>
                         <div class="col-md">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 15rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
                                 <span class="badge badge-label">RPG Game </span>
                             </div>
@@ -57,20 +57,20 @@
                     </div>
                     <div class="row">
                         <div class="col-md">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 15rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
                                 <span class="badge badge-label">Trivia Game </span>
                             </div>
                         </div>
                         <div class="col-md">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="width: 15rem;">
                                 <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
                                 <span class="badge badge-label">Trivia Game </span>
                             </div>
                         </div>
                     </div>
                     <section>
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: 15rem;">
                             <img src="http://placekitten.com/200/200" class="card-img-top" alt="photo of kitten">
                             <span class="badge badge-label">Trivia Game </span>
                         </div>
