--- a/index.html
+++ b/index.html
@@ -10,28 +10,34 @@
     </head>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg"> 
-                <h3>  
-                    <span class="badge badge-secondary">Rebecca Barrett</span>
-                </h3>
-                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                    <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked> 
-                        <a href="index.html">About</a>
-                    </label>
-                    <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option2" autocomplete="off">
-                            <a href="portfolio.html">Portfolio</a>
-                    </label>
-                    <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option3" autocomplete="off"> 
-                        <a href="contact.html">Contact</a>
-                    </label>
+            <nav class="navbar navbar-expand-lg "> 
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-8 col-lg-10"> 
+                            <h3>  
+                                <span class="badge badge-secondary">Rebecca Barrett</span>
+                            </h3>
+                        </div>
+                        <div class="col-sm col-md-4  col-lg-2 btn-group btn-group-toggle">
+                            <label class="btn btn-secondary active">
+                                <input type="radio" name="options" id="option1" autocomplete="off" checked> 
+                                <a href="index.html">About</a>
+                            </label>
+                            <label class="btn btn-secondary active">
+                                <input type="radio" name="options" id="option2" autocomplete="off">
+                                    <a href="portfolio.html">Portfolio</a>
+                            </label>
+                            <label class="btn btn-secondary active">
+                                <input type="radio" name="options" id="option3" autocomplete="off"> 
+                                <a href="contact.html">Contact</a>
+                            </label>
+                        </div>
+                    </div>
                 </div>
             </nav>
-        </div>
+            </div>
     </header>
-    <body>
+    <body class="background">
         <div class="container">
             <div class="wrapper">
                 <div class="jumbotron">
