--- a/index.html
+++ b/index.html
@@ -46,8 +46,14 @@
                     <div>
                         <img src="assets/images/photo.png" class="img-face">
                         <p>
-                            You tell me where we start, where we're going, where we're going afterwards. You just tell me what you want, and I'm gonna be that for you. There's a hundred thousand streets in this city. If I drive for you, you get your money. I get sick of myself, so I can imagine how everyone else feels. I don't sit in while you're running it down. I went through puberty in a theme park. He said that I was going to get to rob the bank for real.
+                            Becca is a bit of a Newbie when it comes to code. Within the last couple of months she has taught herself some basic HTML and CSS skills and is currently enrolled in the University of Denver’s Coding Bootcamp. Becca is from a small town in South-Eastern Colorado about 3 and a half hours southeast from Denver and is currently living in a tiny studio apartment in Arvada with her cat Allie. She is truly an artist at heart and loves to mess with Pastels and Acrylics in particular. You can also find her tending to her various houseplants, baking (she makes a mean cinnamon roll) or just spending time with her friends and family.
                         </p>
+                        <p>
+                            She enrolled in this Bootcamp because she loves to code. Everything so far has been an absolute blast and she looks forward to the rest of the curriculum.  A career in web development should provide an outlet for her creativity as well as provide a job with the flexibility to live anywhere and work from anywhere. Coding excites her and she cannot wait to work in web development.
+                        </p>
+                        <P>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi architecto sed dolorum ipsum quo in? Magnam placeat asperiores nihil praesentium eum id, I ran out of things to type but I wanted to view the text wrap. deleniti optio? Eos eligendi, accusamus, autem nihil omnis ut eaque, explicabo facilis quod laboriosam expedita asperiores? Voluptas asperiores aut accusantium, quasi doloremque dolorem repudiandae magnam est esse dolor! Esse amet ratione ad assumenda velit nesciunt ut vel, a, sint temporibus aspernatur iure explicabo. Libero dolorem natus a nisi quas? Nisi quae atque inventore.
+                        </P>
                     </div>
                 </div>
             </div>
