finished layout corrected float on images

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     </header>
     <body class="background">
         <div class="container">
-            <div class="wrapper">
+            <article>
                 <div class="jumbotron">
                     <div>
                         <h1 class="display-4">Contact</h1>
@@ -59,7 +59,7 @@
                         </form>
                     </div>
                 </div>
-            </div>
+            </article>
         </div>
     </body>
 
