--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
             </nav>
             </div>
     </header>
-    <body class="background">
-        <div class="container">
-            <div class="wrapper">
+    <body class="background d-flex flex-column h-100">
+        <div class="container flex-shrink-0">
+            <article>
                 <div class="jumbotron">
                     <h1 class="display-4">About Me</h1>
                     <hr class="my-4">
                     <!-- <div class="row">
                         <div class="col-sm-12 col-md-0"> -->
-                            <div class="card" style="width: 18rem;">
+                            <div class="card float-sm-none float-md-left" style="width: 18rem;">
                                 <img src="assets/images/photo.png" class="card-img-top" alt="Picture of Me!">
                             </div>
                         <!-- </div> -->
@@ -62,13 +62,13 @@
                         </div>
                     <!-- </div> -->
                 </div>
-            </div>
+            </article>
         </div>
     </body>
 
     <footer>
     <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">©Copyright
+        <div class="footer-copyright text-center py-3 mt-auto">©Copyright
         </div>    
     </footer>
 </html>
