--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     </header>
     <body class="background"> 
         <div class="container">
-            <div class="wrapper">
+            <article>
                 <div class="jumbotron">
                     <div class="row">
                         <div class="col-md">
@@ -82,7 +82,7 @@
                         </div>
                     </section>
                 </div>
-            </div>
+            </article>
         </div>
     </body>
     <footer id="sticky-footer">
