--- a/contact.html
+++ b/contact.html
@@ -46,14 +46,14 @@
                         <hr class="my-4">
                         <form action="https://formspree.io/barrett4467@gmail.com" method="POST">
                             <div class="form-group">
-                                <label for="exampleFormControlInput1">Name</label>
-                                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
-                                <label for="exampleFormControlInput1">Email</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
+                                <label for="name">Name</label>
+                                <input type="text" class="form-control" id="name" placeholder="John Smith">
+                                <label for="email">Email</label>
+                                <input type="text" class="form-control" id="email" placeholder="example@gmail.com">
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Message</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                <label for="message">Message</label>
+                                <textarea class="form-control" id="message" rows="3"></textarea>
                             </div>
                             <button type="submit" class="btn btn-blue">Submit</button>
                         </form>
