--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                         <form action="https://formspree.io/barrett4467@gmail.com" method="POST">
                             <div class="form-group">
                                 <label for="name">Name</label>
-                                <input type="text" class="form-control" id="name" placeholder="John Smith">
+                                <input type="text" name="Name" placeholder="Your name...">
                                 <label for="email">Email</label>
                                 <input type="text" class="form-control" id="email" placeholder="example@gmail.com">
                             </div>
