--- a/contact.html
+++ b/contact.html
@@ -47,13 +47,15 @@
                         <form action="https://formspree.io/barrett4467@gmail.com" method="POST">
                             <div class="form-group">
                                 <label for="name">Name</label>
-                                <input type="text" name="Name" placeholder="Your name...">
-                                <label for="email">Email</label>
-                                <input type="text" class="form-control" id="email" placeholder="example@gmail.com">
+                                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
                             </div>
                             <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea class="form-control" id="message" rows="3"></textarea>
+                              <label for="email">Email address</label>
+                              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
+                            </div>
+                            <div class="form-group">
+                              <label for="message">Message</label>
+                              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                             <button type="submit" class="btn btn-blue">Submit</button>
                         </form>
